--- a/maestro-test-scripts/pom.xml
+++ b/maestro-test-scripts/pom.xml
@@ -135,6 +135,7 @@
         </dependency>
     </dependencies>
 
+
     <pluginRepositories>
         <pluginRepository>
             <id>bintray</id>
@@ -150,13 +151,11 @@
     </pluginRepositories>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>groovy-maven-plugin</artifactId>
-                <version>2.0</version>
-            </plugin>
-        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/groovy</directory>
+            </resource>
+        </resources>
     </build>
 
     <profiles>
