--- a/maestro-reports/src/test/resources/data-inspector-missing/receiver/failed/4/fake-02.host.com/test.properties
+++ b/maestro-reports/src/test/resources/data-inspector-missing/receiver/failed/4/fake-02.host.com/test.properties
@@ -15,15 +15,15 @@
 #
 
 #mpt
-#Fri Dec 08 09:39:05 CET 2017
+#Fri Dec 08 12:30:19 CET 2017
 fcl=200
 parallelCount=1
 apiName=JMS
-# duration=300
+duration=300
 durationType=time
 rate=1000000
 variableSize=0
 apiVersion=undefined
-brokerUri=tcp\://fake-01.host.com\:61616/test.performance.queue?protocol\=OPENWIRE&durable\=true
-messageSize=1024
+brokerUri=tcp\://fake-02.host.com\:61616/test.performance.queue?protocol\=OPENWIRE&durable\=true
+messageSize=100
 protocol=OPENWIRE
