--- a/maestro-reports/src/test/resources/data-inspector-missing/sender/success/0/fake-02.host.com/test.properties
+++ b/maestro-reports/src/test/resources/data-inspector-missing/sender/success/0/fake-02.host.com/test.properties
@@ -19,11 +19,11 @@
 fcl=200
 parallelCount=1
 apiName=JMS
-# duration=300
+duration=300
 durationType=time
 rate=1000000
 variableSize=0
 apiVersion=undefined
-brokerUri=tcp\://fake-01.host.com\:61616/test.performance.queue?protocol\=OPENWIRE&durable\=true
+brokerUri=tcp\://fake-02.host.com\:61616/test.performance.queue?protocol\=OPENWIRE&durable\=true
 messageSize=1024
 protocol=OPENWIRE
