--- a/maestro-reports/src/test/resources/data-inspector-missing/sender/success/2/fake-02.host.com/test.properties
+++ b/maestro-reports/src/test/resources/data-inspector-missing/sender/success/2/fake-02.host.com/test.properties
@@ -15,15 +15,15 @@
 #
 
 #mpt
-#Fri Dec 08 09:39:05 CET 2017
+#Fri Dec 08 09:57:30 CET 2017
 fcl=200
 parallelCount=1
 apiName=JMS
-# duration=300
+duration=300
 durationType=time
 rate=1000000
 variableSize=0
 apiVersion=undefined
-brokerUri=tcp\://fake-01.host.com\:61616/test.performance.queue?protocol\=OPENWIRE&durable\=true
+brokerUri=amqp\://fake-02.host.com/test.performance.queue?durable\=true
 messageSize=1024
-protocol=OPENWIRE
+protocol=AMQP
