NEW: support for configuration files on the CLI client

--- a/maestro-cli/src/main/resources/config/maestro-cli.properties
+++ b/maestro-cli/src/main/resources/config/maestro-cli.properties
@@ -13,4 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# How many messages to send as warm-up
+# warm-up.message.count=1000000
 #
+#
+# The amount of time that maestro client waits for a response from the
+# peers, when using a time-based duration for the tests, is determined
+# by the duration of said test versus the multiplier given below (ie.:
+# for 1m test, it waits as much as 2m for a response from the peers).
+# duration.time.wait.multiplier=2
+#
+#
+# The amount of time that maestro client waits for a response from the
+# peers, when using a count-based duration for the tests, is determined
+# by the calculated time of sending the warm-up count of messages divided
+# by the given rate for the test, plus the base below. For example, for a
+# warm-up of 1000000 messages sending 10k msgs/sec as the warm, the
+# estimated duration would be 100 seconds + the base below, therefore
+# totalling 190 seconds of wait time. For unbounded rate tests, defaults
+# to the base value (90).
+# duration.count.wait.base=90
