UPD: to allow adjusting the warm-up rate

--- a/maestro-cli/src/main/resources/config/maestro-cli.properties
+++ b/maestro-cli/src/main/resources/config/maestro-cli.properties
@@ -33,3 +33,10 @@
 # totalling 190 seconds of wait time. For unbounded rate tests, defaults
 # to the base value (90).
 # duration.count.wait.base=90
+
+
+# The warm up rate is calculated as a percent of the actual test rate.
+# By default, the warm-up rate uses 30% of the given rate (when the test
+# is using a fixed rate > 0). To adjust the warm-up rate value, change
+# the setting below (ideally, it should be between 10 and 90).
+# warm-up.rate.percent=30
