FIX: do handle the cool down period on the fixed rate tests

--- a/maestro-cli/src/main/resources/config/maestro-cli.properties
+++ b/maestro-cli/src/main/resources/config/maestro-cli.properties
@@ -40,3 +40,8 @@
 # is using a fixed rate > 0). To adjust the warm-up rate value, change
 # the setting below (ideally, it should be between 10 and 90).
 # warm-up.rate.percent=30
+
+
+# Cool down period, in seconds, between warm-up and test execution for
+# fixed rate tests
+# test.fixedrate.cooldown.period=1
