--- a/maestro-cli/src/main/resources/config/maestro-cli.properties
+++ b/maestro-cli/src/main/resources/config/maestro-cli.properties
@@ -45,3 +45,7 @@
 # Cool down period, in seconds, between warm-up and test execution for
 # fixed rate tests
 # test.fixedrate.cooldown.period=1
+
+
+# Default wait time, in seconds, for the workers to flush their data
+# test.post.processing.wait.time=5
