NEW: adds a new downloader that can fetch the files via Maestro broker

--- a/maestro-reports/pom.xml
+++ b/maestro-reports/pom.xml
@@ -43,6 +43,12 @@
 
         <dependency>
             <groupId>org.maestro</groupId>
+            <artifactId>maestro-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.maestro</groupId>
             <artifactId>maestro-plotter-common</artifactId>
             <version>${project.version}</version>
         </dependency>
