FIX: ensure that sending the log files is throttled
The idea is that collecting them should be faster than producing them.
Otherwise this could cause some problems with JVM-based Maestro brokers
running on configurations w/ limited HEAP.

--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -40,3 +40,10 @@
 
 # The percentile used to check the latency threshold for the 'soft' FCL policy
 # maestro.worker.fcl.soft.percentile=90.0
+
+
+# When sending multiple notes in a row, it might be desired to throttle the pace on which they are sent.
+# This is usually required when using a Java-based Maestro broker in a constrained memory environment,
+# so that it does not exhaust the JVM memory heap. TL;DR: this is helpful to throttle the worker so that
+# the clients can consume the messages faster. This delay is in milliseconds.
+# maestro.worker.throttle.delay=500
