UPD: to verify the files after they have been downloaded

--- a/maestro-workers/maestro-worker-common/pom.xml
+++ b/maestro-workers/maestro-worker-common/pom.xml
@@ -45,6 +45,12 @@
 
         <dependency>
             <groupId>org.maestro</groupId>
+            <artifactId>maestro-contrib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.maestro</groupId>
             <artifactId>maestro-client</artifactId>
             <version>${project.version}</version>
         </dependency>
