NEW: wait mechanism to ensure that all files have been downloaded

--- a/maestro-cli/src/main/resources/config/maestro-cli.properties
+++ b/maestro-cli/src/main/resources/config/maestro-cli.properties
@@ -62,3 +62,8 @@
 
 # To discard the post test CO correction fix and use the legacy behavior
 # hdr.plotter.legacy.mode=false
+
+
+# When downloading files via broker, how much time, in seconds
+# to wait until considering that all files have been downloaded
+# download.broker.expiry=60
