Revert "Revert "FIX: front-end should reset the flush wait time for larger scale tests""
This reverts commit 6d33805674b6a61d6ff4e62130e538e92c745f90.

--- a/maestro-cli/src/main/resources/config/maestro-cli.properties
+++ b/maestro-cli/src/main/resources/config/maestro-cli.properties
@@ -71,3 +71,22 @@
 # How much time it will wait for each worker to complete its unit of work after processing and event
 # that results in test stop
 # maestro.worker.stop.timeout=1000
+
+### Flush Wait settings ###
+### When the systems running the backends are under load (which occurs for high scale tests) this cleanup
+### period can take a long time. The settings bellow are used to control whether the front end needs to
+### wait for this flush period to complete after the test run. Test warm up always take this into account.
+###
+### At the moment, this behavior is enforced only for the fixed rate test, but in the future will be enforced
+### on the Incremental tests as well.
+
+# If the number of parallel connections is greater than this value, the test will enforce the wait period
+# flush.wait.hard.ceiling.parallel.count=100
+
+# If the message size (in bytes) is greater than this value, the test executor will enforce the wait period
+# flush.wait.hard.ceiling.message.size=10240
+
+# If the parallel count is greater than this value and the message size is greater that the other value, the
+# test executor will enforce the wait period
+# flush.wait.soft.ceiling.parallel.count=30
+# flush.wait.soft.ceiling.message.size=1024
