--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -48,6 +48,11 @@
 # the clients can consume the messages faster. This delay is in milliseconds.
 # maestro.worker.throttle.delay=500
 
-# How much time it will wait for each worker to complete its unit of work after processing and event
-# that results in test stop
+# How much time it will wait for each worker to complete its unit of work after processing an event
+# that results in test stop or the test is complete (in milliseconds)
 # maestro.worker.stop.timeout=1000
+
+
+# The maximum combined amount of time for all the workers to complete their unit of work after processing
+# an event that results in test stop or the test is complete (in milliseconds)
+# maestro.worker.active.deadline.max=55000
