NEW: drain support
Rework the worker code so that a drain operation is executed after the
test is complete. As part of the implementation, all the post-processing
code that was executed on test completion was refactored to implement
the observer pattern, thus allowing for easier cascading of container
status changes.

--- a/maestro-worker/src/main/resources/config/maestro-worker.properties
+++ b/maestro-worker/src/main/resources/config/maestro-worker.properties
@@ -51,3 +51,7 @@
 # How much time it will wait for each worker to complete its unit of work after processing and event
 # that results in test stop
 # maestro.worker.stop.timeout=1000
+
+
+# How many tries the workers have until they consider a queue as drained.
+#worker.auto.drain.retries=10
