--- a/maestro-reports/pom.xml
+++ b/maestro-reports/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>net.orpiske</groupId>
             <artifactId>hdr-histogram-plotter</artifactId>
-            <version>1.3.0</version>
+            <version>1.4.1-SNAPSHOT</version>
         </dependency>
 
         <!-- Junit (for tests only) -->
